--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,82 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html{
+  font-size: 62.5%;
+}
 body {
-  font-family: Arial, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: lightblue;
+}
+header{
+  min-height: 12vh;
+}
+nav ul{
+  position: absolute;
+  top: 3rem;
+  display: flex;
+  padding-left: 50rem;
+  gap: 10rem;
+  font-size: 2rem;
+  list-style-type: none;
+}
+nav ul li a{
+  text-decoration: none;
+}
+nav ul li a:hover{
+  text-decoration: underline;
+  color: white;
+}
+img{
+  position: absolute;
+  left: 15rem;
+  width: 4vw;
+  padding-top: 1rem;
+}
+.section1{
+  min-height: 100vh;
+  background-image: url(images/pexels-pixabay-159652.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 100%;
+  border-bottom: 1px solid blue;
+}
+.word1{
+  font-size: 3rem;
+  text-align: center;
+  padding-top: 20rem;
+  line-height: 2;
+  color: white;
+}
+.section2{
+  margin-top: 10rem;
+}
+h1{
+  font-size: 4rem;
+  color: blue;
+  padding-left: 15rem;
+  padding-bottom: 5rem;
 }
 .news-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  padding-left: 12rem;
+  font-size: 1.5rem;
 }
 .news-article {
-  border: 1px solid #ddd;
+  border: 1px solid blue;
   border-radius: 8px;
   margin: 10px;
   padding: 10px;
-  width: 300px;
+  width: 20vw;
+  height: 30vh;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  overflow: auto;
 }
 .news-article img {
   max-width: 100%;
   border-radius: 8px;
-}
-.news-article h3 {
-  font-size: 1.2em;
 }
